Modify resume link and button attributes in index.html
Updated resume link and adjusted button formatting.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,20 @@
         actively seeking opportunities worldwide including remote and visa-sponsored roles.
     </p>
 
-    <div class="buttons">
-        <a href="#resume" class="btn">View Resume</a>
-        <a href="#projects" class="btn outline">View Projects</a>
-    </div>
+   <div class="buttons">
+  <a 
+    href="Definate_Midarikwa_CV_no_github.pdf" 
+    class="btn" 
+    target="_blank"
+  >
+    View Resume
+  </a>
+
+  <a href="#projects" class="btn outline">
+    View Projects
+  </a>
+</div>
+
 </section>
 
 <section id="about">
@@ -76,3 +86,4 @@
 
 </body>
 </html>
+
