Update index.html with new project details
Added a new project 'Data Mentor Chatbot' with details and technologies used.

--- a/index.html
+++ b/index.html
@@ -63,16 +63,37 @@
 </section>
 
 <section id="projects">
-    <h2>Projects</h2>
-    <div class="card">
-        <h3>NBA Player Performance Analysis</h3>
-        <p>Regression modeling and cross-validation using R.</p>
-    </div>
-    <div class="card">
-        <h3>Clinic Queue Simulation</h3>
-        <p>Simulation modeling to optimize patient waiting time.</p>
-    </div>
+  <h2>Projects</h2>
+
+  <div class="card">
+    <h3>Data Mentor Chatbot</h3>
+    <p>
+      Streamlit-based AI data assistant that helps users upload, analyze,
+      visualize, clean, and model datasets through a chat-style interface.
+    </p>
+    <p><strong>Tech:</strong> Python, Streamlit, Pandas, Scikit-learn</p>
+    <a 
+      href="https://github.com/YOUR_GITHUB_USERNAME/data-mentor-chatbot"
+      target="_blank"
+      class="btn outline"
+    >
+      View on GitHub
+    </a>
+  </div>
+
+  <div class="card">
+    <h3>NBA Player Performance Analysis</h3>
+    <p>Regression modeling and cross-validation using R.</p>
+    <p><strong>Tech:</strong> R, Regression, Cross-Validation</p>
+  </div>
+
+  <div class="card">
+    <h3>Clinic Queue Simulation</h3>
+    <p>Simulation modeling to optimize patient waiting time.</p>
+    <p><strong>Tech:</strong> R, Simulation, Optimization</p>
+  </div>
 </section>
+
 
 <section id="contact">
     <h2>Contact</h2>
@@ -86,4 +107,5 @@
 
 </body>
 </html>
+
 
