Refactor index.html for improved content clarity
Updated the content and structure of the index.html file to enhance the description of the Data Mentor Chatbot project and provide clearer information about skills and projects.

--- a/index.html
+++ b/index.html
@@ -67,10 +67,17 @@
 
   <div class="card">
     <h3>Data Mentor Chatbot</h3>
-    <p>
-      Streamlit-based AI data assistant that helps users upload, analyze,
-      visualize, clean, and model datasets through a chat-style interface.
-    </p>
+     <p>
+    An interactive Streamlit-based AI data assistant designed to guide users
+    through data analysis tasks using natural language. The chatbot supports
+    dataset upload, exploration, visualization, cleaning, and basic modeling
+    while explaining results in a clear, mentor-style manner.
+  </p>
+
+  <p>
+    It enables users to quickly understand their data, apply appropriate
+    analytical techniques, and interpret outputs without writing extensive code.
+  </p>
     <p><strong>Tech:</strong> Python, Streamlit, Pandas, Scikit-learn</p>
     <a 
       href="https://github.com/DEFINATE2001/chatbot-project"
@@ -107,6 +114,7 @@
 
 </body>
 </html>
+
 
 
 
