Revise project details in index.html
Updated project descriptions and added new healthcare queue simulation project.

--- a/index.html
+++ b/index.html
@@ -95,9 +95,30 @@
   </div>
 
   <div class="card">
-    <h3>Clinic Queue Simulation</h3>
-    <p>Simulation modeling to optimize patient waiting time.</p>
-    <p><strong>Tech:</strong> R, Simulation, Optimization</p>
+   <h3>Healthcare Queue Simulation</h3>
+<p>
+A discrete-event simulation project that models patient flow in a healthcare
+setting to explore queue behavior, waiting times, and system congestion. The
+simulation focuses on illustrating how service processes and arrival patterns
+affect operational performance in healthcare systems.
+</p>
+
+<p>
+This project emphasizes simulation methodology rather than real-world datasets,
+providing a clear foundation for understanding healthcare operations and
+decision-making under uncertainty.
+</p>
+
+<p><strong>Tech:</strong> R, Quarto, Discrete-Event Simulation</p>
+
+<a
+  href="https://github.com/DEFINATE2001/healthcare-queue-simulation"
+  target="_blank"
+  class="btn outline"
+>
+  View on GitHub
+</a>
+
   </div>
 </section>
 
@@ -114,6 +135,7 @@
 
 </body>
 </html>
+
 
 
 
