Fix HTML formatting and update resume link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
    <div class="buttons">
   <a 
-    href="Definate_Midarikwa_CV_no_github.pdf" 
+    href="specific data science resume.pdf" 
     class="btn" 
     target="_blank"
   >
@@ -129,6 +129,7 @@ decision-making under uncertainty.
 
 </body>
 </html>
+
 
 
 
